my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EEMPTYSTRUCT/EEMPTYSTRUCT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EEMPTYSTRUCT.dml:10:15: error EEMPTYSTRUCT: struct or layout with no fields
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EEMPTYSTRUCT.dml:12:1: error EEMPTYSTRUCT: struct or layout with no fields
